<?xml version="1.0"?>
  <!-- <package> -->
<package format="2">
  <name>test_ros_matlab</name>
  <version>0.0.0</version>
  <description>testing Ros with Matlab using custom message type package</description>

  <maintainer email="ashesh.vasalya@aist.go.jp">Ashesh Vasalya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>


</package>
